# drevalpy

./: .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  Dockerfile  README.md  README.rst  dreval_colab_demo.ipynb  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: publish-docker.yml  release_drafter.yml  run_tests.yml
.nextflow/: history
.nextflow/cache/0494c21e-8a58-4177-b98a-025dc192b538/: index.focused_panini
.nextflow/cache/08c180ad-ed26-4631-8114-8beb22f39c74/: index.thirsty_angela
docs/: _key_contributors.rst  conf.py  contributing.rst  drevalpy.models.KNNRegressor.rst  drevalpy.models.Lasso.rst  drevalpy.models.Precily.rst  drevalpy.models.SimpleNeuralNetwork.rst  drevalpy.models.baselines.rst  drevalpy.models.rst  example_flexible_inputs.rst  example_wandb.rst  index.rst  installation.rst  news.rst  quickstart.rst  reference.rst  runyourmodel.rst  usage.rst
docs/_static/: custom_cookietemple.css
drevalpy/: .nextflow.log.1  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  cli_model_testing.py  cli_preprocess_custom.py  cli_run_cv.py  experiment.py  utils.py
drevalpy/.nextflow/: history
drevalpy/cli/: __init__.py  _helpers.py  _legacy.py  collect_results.py  consolidate_single_drug.py  evaluate_hpams.py  evaluate_test.py  legacy.py  load_response.py  main.py  make_cv_pkls.py  make_final_split_pkls.py  make_hpam_yamls.py  make_pipeline_report.py  make_randomization_yamls.py  pipeline.py  report.py  test_cv.py  train_cv.py  train_final_model_cmd.py  tune_final_model.py  viability_postprocess.py  viability_preprocess.py
drevalpy/datasets/: custom_splits.py  dataset.py  loader.py  utils.py
drevalpy/datasets/featurizer/: create_molgnet_embeddings.py  (+2 more)
drevalpy/models/: __init__.py  drp_model.py  lightning_metrics_mixin.py  utils.py
drevalpy/visualization/: create_report.py  utils.py
examples/: custom_split_lco_fraction.py
results/pipeline_info/: execution_report_2025-05-12_13-54-45.html  execution_report_2025-05-12_14-01-58.html  execution_report_2025-05-12_15-18-56.html  execution_report_2025-05-12_15-20-31.html  execution_report_2025-05-12_15-22-32.html  execution_report_2025-05-12_15-24-22.html  execution_report_2025-05-12_15-32-22.html  execution_report_2025-05-12_15-38-55.html  execution_report_2025-05-12_15-52-07.html  execution_report_2025-05-12_15-56-16.html  execution_report_2025-05-12_16-06-46.html  execution_report_2025-05-12_16-17-56.html  execution_report_2025-05-12_16-20-51.html  execution_report_2025-05-12_16-23-03.html  execution_report_2025-05-12_16-29-10.html  execution_report_2025-05-12_16-39-05.html  execution_report_2025-05-12_16-39-53.html  execution_timeline_2025-05-12_13-54-45.html  execution_timeline_2025-05-12_14-01-58.html  execution_timeline_2025-05-12_15-18-56.html  execution_timeline_2025-05-12_15-20-31.html  execution_timeline_2025-05-12_15-22-32.html  execution_timeline_2025-05-12_15-24-22.html  execution_timeline_2025-05-12_15-32-22.html  execution_timeline_2025-05-12_15-38-55.html  execution_timeline_2025-05-12_15-52-07.html  execution_timeline_2025-05-12_15-56-16.html  execution_timeline_2025-05-12_16-06-46.html  execution_timeline_2025-05-12_16-17-56.html  execution_timeline_2025-05-12_16-20-51.html  execution_timeline_2025-05-12_16-23-03.html  execution_timeline_2025-05-12_16-29-10.html  execution_timeline_2025-05-12_16-39-05.html  execution_timeline_2025-05-12_16-39-53.html  execution_trace_2025-05-12_13-54-45.txt  execution_trace_2025-05-12_14-01-58.txt  execution_trace_2025-05-12_15-18-56.txt  execution_trace_2025-05-12_15-20-31.txt  execution_trace_2025-05-12_15-22-32.txt  execution_trace_2025-05-12_15-24-22.txt  (+30 more)
results/test_run/: evaluation_results.csv  evaluation_results_per_cl.csv  evaluation_results_per_drug.csv  true_vs_pred.csv
tests/: __init__.py  conftest.py  test_cli_run_cv.py  test_cv_split_integrity.py  test_dataset.py  test_drp_model.py  test_hpam_tune.py  test_hpam_tune_raytune.py  test_lasso.py  test_main.py  test_train_mutability.py
tests/cli/: test_cli_app.py  test_helpers.py  test_legacy.py  test_test_cv.py
tests/datasets/: __init__.py  split_helpers.py  test_custom_splits.py
tests/models/: test_baselines.py  test_global_models.py  test_single_drug_models.py
tests/visualization/: test_utils.py
(+261 files in other folders)
