[tool.poetry]
name = "drevalpy"
version = "1.5.1"
description = "Drug response evaluation of cancer cell line drug response models in a fair setting"
authors = ["DrEvalPy development team"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.scripts]
drevalpy                            = "drevalpy.cli.main:cli_main"
drevalpy-report                     = "drevalpy.cli.legacy:main"
drevalpy-viability-preprocess       = "drevalpy.cli.legacy:preprocess_raw_viability"
drevalpy-viability-postprocess      = "drevalpy.cli.legacy:postprocess_viability"
drevalpy-load-response              = "drevalpy.cli.legacy:load_response"
drevalpy-make-cv-pkls               = "drevalpy.cli.legacy:cv_split"
drevalpy-make-hpam-yamls            = "drevalpy.cli.legacy:hpam_split"
drevalpy-train-cv                   = "drevalpy.cli.legacy:train_and_predict_cv"
drevalpy-evaluate-hpams             = "drevalpy.cli.legacy:evaluate_and_find_max"
drevalpy-test-cv                    = "drevalpy.cli.legacy:train_and_predict_final"
drevalpy-make-randomization-yamls   = "drevalpy.cli.legacy:randomization_split"
drevalpy-make-final-split-pkls      = "drevalpy.cli.legacy:final_split"
drevalpy-tune-final-model           = "drevalpy.cli.legacy:tune_final_model"
drevalpy-train-final-model          = "drevalpy.cli.legacy:train_final_model"
drevalpy-consolidate-single-drug    = "drevalpy.cli.legacy:consolidate_results"
drevalpy-evaluate-test              = "drevalpy.cli.legacy:evaluate_test_results"
drevalpy-collect-results            = "drevalpy.cli.legacy:collect_results"
drevalpy-make-pipeline-report       = "drevalpy.cli.legacy:pipeline_report"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.20"
scipy = "*"
scikit-learn = ">=1.4"
pandas = "*"
networkx = "*"
pyyaml = "*"
pytorch-lightning = ">=2.5"
torch = ">=2.1"
torch-geometric = "*"
flaky = "*"
requests = "*"
plotly = "*"
matplotlib = "*"
importlib-resources = "*"
scikit-posthocs = "*"
curve-curator = "*"
subword-nmt = ">=0.3.8"
toml = {version = ">=0.10.2"}
poetry = ">=2.0.1"
starlette = ">=0.49.1"
pydantic = { version = ">=2.5", optional = true }
wandb = ">=0.24.0"
xgboost = { version = ">=3.2.0", optional = true }
lightgbm = { version = ">=4.0.0", optional = true }
typer = ">=0.26,<0.27"
rich = ">=15.0.0"
gseapy = { version = ">=1.1.0", optional = true }

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.extras]
multiprocessing = ["ray", "pydantic"]
xgboost = ["xgboost"]
lightgbm = ["lightgbm"]
precily = ["gseapy"]

[tool.poetry.dependencies.ray]
extras = ["tune"]
version = "*"

[tool.poetry.group.development.dependencies]
sphinx-autodoc-typehints = "*"
sphinx = ">=4.0.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-rtd-theme = ">=1.0.0,<3.0.3"
sphinx-click = ">=3.0.0"
pytest = "*"
nox = "*"
nox-poetry = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-rst-docstrings = "*"
darglint = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyupgrade = "*"
pep8-naming = "*"

[tool.poetry.group.torch-cuda]
optional = true
dependencies = { torch = ">=2.1", torch-geometric = "*" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.15.8"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"
known_first_party = ["drevalpy"]
known_third_party = ["wandb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
