[metadata]
license_files = LICENSE.txt
[tool.black]
line-length = 120
[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"
[flake8]
max-line-length = 120
max-complexity = 10
docstring-convention = google
per-file-ignores =
	tests/*:S101,S301,S403
	tests/cli/*:S101,D103,DAR101,DAR103
	drevalpy/cli/*:D103,DAR101,DAR103,DAR201
	drevalpy/cli_run_cv.py:DAR101,DAR401
	drevalpy/cli_preprocess_custom.py:DAR101
	drevalpy/cli_model_testing.py:DAR101,DAR201,DAR401
	drevalpy/visualization/create_report.py:DAR101
	drevalpy/datasets/curvecurator.py:S404,S603
docstring_style = sphinx
